[gd_scene load_steps=2 format=3 uid="uid://cmunhw0lkurlv"]

[ext_resource type="Script" path="res://scenes/UI/settings_menu/settings_menu.gd" id="1_4wmhx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wmhx")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.156863, 0.156863, 0.180392, 1)

[node name="SettingsContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeHSlider" type="HSlider" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.5
allow_lesser = true

[node name="MuteVolumeLabel" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "Mute Volume"

[node name="MuteCheckBox" type="CheckBox" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2

[node name="MuteMusicLabel" type="Label" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "Mute Music"

[node name="MuteMusicCheckBox" type="CheckBox" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="value_changed" from="SettingsContainer/VBoxContainer/VolumeHSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="SettingsContainer/VBoxContainer/MuteCheckBox" to="." method="_on_mute_check_box_toggled"]
[connection signal="toggled" from="SettingsContainer/VBoxContainer/MuteMusicCheckBox" to="." method="_on_mute_music_check_box_toggled"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
